tests/NormalTests/paczka1/fuzzy1/74873359.err
Error in line 4: 7go63n74Vyg A685 43,8
Error in line 19: 7go63n74Vyg S199 19,2
Error in line 18: vvdV97b A954 73,9
Error in line 35: 7go63n74Vyg A954 3,7
